Boss HP HUD Implement & Belial 30% Complete

--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -148,12 +148,18 @@
     <ClInclude Include="BansheeBullet.h" />
     <ClInclude Include="BansheeMissileEffect.h" />
     <ClInclude Include="BatBullet.h" />
+    <ClInclude Include="Belial.h" />
     <ClInclude Include="BelialBossMap.h" />
+    <ClInclude Include="BelialCore.h" />
     <ClInclude Include="BelialRoomGate.h" />
     <ClInclude Include="BigGrayIceSkullWarrior.h" />
     <ClInclude Include="BlackSmithNPC.h" />
+    <ClInclude Include="BossHPHUD.h" />
+    <ClInclude Include="BossIdleState.h" />
     <ClInclude Include="BossMap.h" />
+    <ClInclude Include="BossMonster.h" />
     <ClInclude Include="BossRoomGate.h" />
+    <ClInclude Include="BossSkillState.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="CheckButtonUI.h" />
     <ClInclude Include="Coin.h" />
@@ -278,12 +284,18 @@
     <ClCompile Include="BansheeBullet.cpp" />
     <ClCompile Include="BansheeMissileEffect.cpp" />
     <ClCompile Include="BatBullet.cpp" />
+    <ClCompile Include="Belial.cpp" />
     <ClCompile Include="BelialBossMap.cpp" />
+    <ClCompile Include="BelialCore.cpp" />
     <ClCompile Include="BelialRoomGate.cpp" />
     <ClCompile Include="BigGrayIceSkullWarrior.cpp" />
     <ClCompile Include="BlackSmithNPC.cpp" />
+    <ClCompile Include="BossHPHUD.cpp" />
+    <ClCompile Include="BossIdleState.cpp" />
     <ClCompile Include="BossMap.cpp" />
+    <ClCompile Include="BossMonster.cpp" />
     <ClCompile Include="BossRoomGate.cpp" />
+    <ClCompile Include="BossSkillState.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="CheckButtonUI.cpp" />
     <ClCompile Include="Coin.cpp" />
