--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -151,6 +151,8 @@
     <ClInclude Include="Belial.h" />
     <ClInclude Include="BelialBossMap.h" />
     <ClInclude Include="BelialCore.h" />
+    <ClInclude Include="BelialCoreParticle.h" />
+    <ClInclude Include="BelialHand.h" />
     <ClInclude Include="BelialRoomGate.h" />
     <ClInclude Include="BigGrayIceSkullWarrior.h" />
     <ClInclude Include="BlackSmithNPC.h" />
@@ -288,6 +290,8 @@
     <ClCompile Include="Belial.cpp" />
     <ClCompile Include="BelialBossMap.cpp" />
     <ClCompile Include="BelialCore.cpp" />
+    <ClCompile Include="BelialCoreParticle.cpp" />
+    <ClCompile Include="BelialHand.cpp" />
     <ClCompile Include="BelialRoomGate.cpp" />
     <ClCompile Include="BigGrayIceSkullWarrior.cpp" />
     <ClCompile Include="BlackSmithNPC.cpp" />
